stacks/gateway/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                use_remote_address: true
                route_config:
                  name: valhalla_routes
                  virtual_hosts:
                    - name: arcane
                      domains:
                        - "arcane.valhalla.local"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: arcane_cluster
                            timeout: 30s

                    - name: qui
                      domains:
                        - "qui.valhalla.local"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: qui_cluster
                            timeout: 60s

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: arcane_cluster
      connect_timeout: 0.5s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: arcane_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: arcane
                      port_value: 3552

    - name: qui_cluster
      connect_timeout: 0.5s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: qui_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: qui
                      port_value: 7476
